🐛 Fixed layout issues with feedback error message
🎨 Changed width property to represent the width of the textarea.

--- a/packages/mephisto-worker-experience/src/Feedback/index.css
+++ b/packages/mephisto-worker-experience/src/Feedback/index.css
@@ -43,7 +43,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
 }
 
@@ -54,14 +54,17 @@
   box-shadow: 0 0 0 0.15rem rgba(193, 193, 193, 0.5);
   border: 0;
   border-radius: 0.35rem;
-  width: 100%;
   padding: 0.5rem;
   transition: background-color 200ms, box-shadow 200ms;
   outline: none;
   font-family: inherit;
   font-size: 0.9em;
   box-sizing: border-box;
-  margin-right: 0.75rem;
+  transform: translateY(2.2px);
+}
+
+.mephisto-worker-experience-feedback__text-area-container {
+  margin-right: 1rem;
 }
 
 #mephisto-worker-experience-feedback__text-area:hover {
